<resources>
    <string name="app_name">FInalProject</string>
    <string name="Game_Name">Sliding Puzzle</string>
    <string name="BTN_Play">Play</string>
    <string name="BTN_Exit">Exit</string>
    <string name="BTN_Score">Score</string>
    <string name="BTN_Easy">Easy</string>
    <string name="BTN_Normal">Normal</string>
    <string name="BTN_Hard">Hard</string>
    <string name="BTN_Back">Back</string>
    <string name="empty"></string>
    <string name="board_size">Board Size is 4X4</string>
    <string name="row">row</string>
    <string name="col">col</string>
    <string name="preference_file_key">com.example.finalproject_preferences</string>
    <string name="score_save">ScoreData.txt</string>
    <string name="Board_Size">Board Size</string>
    <string name="Move">Move</string>
    <string name="Time">Time[Sec]</string>
    <string name="Score">Score</string>
    <string name="ClearScoreBoard">Clear Score Board</string>
    <string name="difficulty">difficulty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>