<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/BTN_Easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTN_Easy" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/BTN_Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTN_Normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/BTN_Hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTN_Hard" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/BTN_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTN_Back" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>